--- a/static/post.html
+++ b/static/post.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>POST FILE</title>
-    <link rel="stylesheet" href="./public/css/post.css">
+    <link rel="stylesheet" href="post.css">
 </head>
 <body>
     <h1>asdf</h1>
