--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,9 @@
         <ul>
             <li>Home</li>
             <li>About</li>
-            <li>Contanct</li>
+            <li><a href="/api/students">Students API</a></li>
+            <li><a href="/api/students/17">Students API with params</a></li>
+            <li><a href="/api/class1/students/query?search=j">Students API with query</a></li>
         </ul>
     </nav>
     
